# detox

./: .clang-format  CMakeLists.txt  main.cpp  my_header.cpp  my_header.h
